--- a/src/docs/geometry8/Чотирикутники.md
+++ b/src/docs/geometry8/Чотирикутники.md
@@ -1,85 +1,89 @@
-# Конспект уроку: Чотирикутник та його елементи
+# Конспект уроку: **Паралелограм. Властивості паралелограма**
 
 ---
 
-## 1. Сусідні відрізки
-**Означення:** Сусідніми відрізками називають відрізки, які мають тільки одну спільну точку, що є кінцем кожного з них.
+## I. Що таке чотирикутник?
 
-**Приклад:**  
-Відрізки $AB$ і $BC$ є сусідніми, якщо вони мають спільну точку $B$.
+Перед тим, як вивчати паралелограм, згадаємо, що таке чотирикутник, адже паралелограм — це особливий вид чотирикутника.
 
----
-
-## 2. Чотирикутник як фігура
-**Означення:** Чотирикутником називають фігуру, що складається оз чотирьох точок $A, B, C, D$ і чотирьох відрізків $AB, BC, CD, DA$.
-
-При цьому:
+### Визначення
+Чотирикутником називають фігуру, що складається з чотирьох точок (вершин) $A, B, C, D$ і чотирьох відрізків (сторін) $AB, BC, CD, DA$, таких що:
 - ніякі два сусідні відрізки не лежать на одній прямій;
-- ніякі два несусідні відрізки не мають спільних точок;
-- ці відрізки обмежують частину площини, яку разом із самими відрізками називають **чотирикутником**.
+- ніякі два несуcідні відрізки не мають спільних точок;
+- ці відрізки обмежують частину площини.
 
-**Вершини:** $A, B, C, D$  
-**Сторони:** $AB, BC, CD, DA$
+### Елементи чотирикутника
+- **Вершини:** точки $A, B, C, D$
+- **Сторони:** відрізки $AB, BC, CD, DA$
+- **Сусідні сторони:** сторони, які є сусідніми відрізками (наприклад, $AB$ і $BC$)
+- **Протилежні сторони:** сторони, які не є сусідніми (наприклад, $AB$ і $CD$)
+- **Сусідні вершини:** вершини, які є кінцями однієї сторони (наприклад, $A$ і $B$)
+- **Протилежні вершини:** несусідні вершини (наприклад, $A$ і $C$)
+- **Позначення:** чотирикутник позначають за його вершинами послідовно (наприклад, $ABCD$)
+- **Периметр:** сума довжин усіх сторін чотирикутника
+- **Діагональ:** відрізок, що сполучає протилежні вершини (наприклад, $AC$ і $BD$)
+- **Кути:** $\angle ABC$, $\angle BCD$, $\angle CDA$, $\angle DAB$
+    - протилежні кути — це кути, які не є сусідніми (наприклад, $\angle ABC$ і $\angle ADC$).
 
----
+### Опуклий і неопуклий чотирикутник
+- **Опуклий** — чотирикутник, у якого всі кути менші від розгорнутого ($180^\circ$).
+- **Неопуклий** — чотирикутник, у якого хоча б один кут більший за $180^\circ$.
 
-## 3. Сусідні та протилежні сторони чотирикутника
-- **Сусідні сторони** — сторони, які є сусідніми відрізками.  
-  **Приклад:** у чотирикутнику $MNPQ$ сторони $MQ$ і $MN$ є сусідніми.
-
-- **Протилежні сторони** — сторони, які не є сусідніми.  
-  **Приклад:** у чотирикутнику $MNPQ$ сторони $NP$ і $MQ$ є протилежними.
-
----
-
-## 4. Сусідні та протилежні вершини чотирикутника
-- **Сусідні вершини** — вершини, які є кінцями однієї сторони.  
-  **Приклад:** у чотирикутнику $MNPQ$ вершини $Q$ і $P$ є сусідніми.
-
-- **Протилежні вершини** — несусідні вершини.  
-  **Приклад:** у чотирикутнику $MNPQ$ вершини $M$ і $P$ є протилежними.
-
----
-
-## 5. Позначення чотирикутника
-Чотирикутник називають і позначають за його вершинами.  
-У позначенні літери, що стоять поруч, відповідають сусіднім вершинам.
-
-**Приклади позначень:**  
-$ABCD$, $PQMN$, $MQPN$, $NPQM$ тощо.
+### Сума кутів чотирикутника
+- **Теорема 1.1:** Сума кутів будь-якого чотирикутника дорівнює $360^\circ$.
+- **Доведення:** проведемо діагональ, яка розбиває чотирикутник на два трикутники.  
+  Оскільки сума кутів кожного трикутника дорівнює $180^\circ$, то:  
+  $$
+  2 \cdot 180^\circ = 360^\circ
+  $$
 
 ---
 
-## 6. Периметр чотирикутника
-**Означення:** Периметром чотирикутника називають суму довжин усіх його сторін.
+## II. Паралелограм. Властивості паралелограма
+
+### 1. Визначення паралелограма
+**Означення:** Паралелограмом називають чотирикутник, у якого кожні дві протилежні сторони **паралельні**.
+- Приклад: у паралелограмі $ABCD$ сторони $AB \parallel CD$, $BC \parallel AD$.
 
 ---
 
-## 7. Діагональ чотирикутника
-**Означення:** Діагоналлю чотирикутника називають відрізок, який сполучає протилежні вершини чотирикутника.
+### 2. Властивість протилежних сторін
+**Теорема 2.1:** Протилежні сторони паралелограма рівні.
+
+**Пояснення:**
+- Якщо провести діагональ $AC$, то трикутники $ABC$ і $CDA$ є рівними за другою ознакою рівності трикутників.
+- Звідси випливає:  
+  $$AB = CD, \quad BC = AD$$
+
+---
+
+### 3. Властивість протилежних кутів
+**Теорема 2.2:** Протилежні кути паралелограма рівні.
+
+**Пояснення:**
+- Із рівності трикутників $ABC$ і $CDA$ випливає, що:  
+  $$\angle B = \angle D, \quad \angle A = \angle C$$
+
+---
+
+### 4. Властивість діагоналей
+**Теорема 2.3:** Діагоналі паралелограма точкою перетину діляться навпіл.
+
+**Пояснення:**
+- Якщо діагоналі $AC$ і $BD$ паралелограма $ABCD$ перетинаються в точці $O$, то:  
+  $$AO = OC, \quad BO = OD$$
+
+---
+
+### 5. Висота паралелограма
+**Означення:** Висотою паралелограма називають перпендикуляр, опущений з будь-якої точки прямої, яка містить сторону паралелограма, на пряму, що містить протилежну сторону.
 
 **Приклад:**  
-У чотирикутнику $ABCD$ відрізки $AC$ і $BD$ є діагоналями.
+У паралелограмі $ABCD$ висотами є відрізки $AF, QE, BM, PN, CK$.
 
----
-
-## 8. Опуклий чотирикутник
-- **Опуклий чотирикутник** — чотирикутник, у якому всі його кути менші від розгорнутого (менші за $180^\circ$).
-- Чотирикутники, у яких не всі кути менші від розгорнутого, називають **неопуклими**.
-
----
-
-## 9. Теорема про суму кутів чотирикутника
-**Теорема 1.1:**  
-Сума кутів чотирикутника дорівнює $360^\circ$.
-
-**Доведення:**  
-У будь-якому чотирикутнику можна провести діагональ, яка розбиває його на два трикутники.  
-Сума кутів чотирикутника буде дорівнювати сумі кутів цих двох трикутників.  
-Оскільки сума кутів кожного трикутника дорівнює $180^\circ$, то:  
-$$180^\circ + 180^\circ = 360^\circ$$
-
-**Наслідок:**  
-У чотирикутнику тільки один із кутів може бути більшим за розгорнутий.
+**Властивості висот:**
+- Всі висоти, проведені до однієї пари паралельних сторін, рівні:  
+  $$AF = QE, \quad BM = PN = CK$$
+- Кажуть, що висоти $BM, CK, PN$ проведено до сторін $BC$ і $AD$, а висоти $AF, QE$ — до сторін $AB$ і $CD$.
 
 ---
